--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   },
 
   "dependencies": {
-    "express": "~3.4.4"
+    "express": "~3.4.4",
+    "ejs": "~1.0.0",
+    "mongoose", "~3.8.11"
   },
   "devDependencies": {},
   "bundleDependencies": [],
