--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "dependencies": {
     "express": "~3.4.4",
     "ejs": "~1.0.0",
-    "mongoose", "~3.8.11"
+    "mongoose": "~3.8.11"
   },
   "devDependencies": {},
   "bundleDependencies": [],
