--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "express": "~3.4.4",
     "ejs": "~1.0.0",
-    "mongoose": "~3.8.11"
+    "mongoose": "~3.8.11",
+    "body-parser":"~1.2.0"
   },
   "devDependencies": {},
   "bundleDependencies": [],
