--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "express": "~3.4.4",
     "ejs": "~1.0.0",
     "mongoose": "~3.8.11",
-    "body-parser":"~1.2.0"
+    "body-parser":"~1.2.0",
+    "bcrypt": "~0.7.7",
+    "passport": "~0.2.0",
+    "passport-local": "~1.0.0",
+    "multer":">=0.0.7"
   },
   "devDependencies": {},
   "bundleDependencies": [],
